Body content is no longer behind the side navigation bar

--- a/styles/indexStyles.css
+++ b/styles/indexStyles.css
@@ -1,4 +1,5 @@
 .bodycontainer{
     display: inline-block;
+    margin-left: 200px;
 	width: auto;
 }
